# PyEpiDoc

./: .gitignore  .gitignore.old  ISic000002.xml  LICENSE  abbreviations.ipynb  break_equals_no_2.xml  break_equals_no_unclear.xml  example_corpus.py  example_corpus_readme.py  example_dates.py  example_epidoc.py  example_epidoc_readme.py  example_id.py  example_iterator.py  example_line.py  example_set_ids.py  example_tokenize.py  example_tokenize_files.py  gap3.xml  getting_started.ipynb  interpunct_1.xml  orgName_2.xml  pyproject.toml  readme.md  space.xml  tei-epidoc.xml  test.xml  test_interpunct.xml
.ipynb_checkpoints/: abbreviations-checkpoint.ipynb  getting_started-checkpoint.ipynb
LICENSES/: LICENSE-EpiDoc-schema  LICENSE-mypy  LICENSE-pyepidoc
example_corpus/: ISic000001.xml  ISic000002.xml  ISic000003.xml  ISic000004.xml  ISic000005.xml  ISic000006.xml  ISic000007.xml  ISic000008.xml  ISic000009.xml  ISic000010.xml  ISic000800.xml  ISic000801.xml  ISic000802.xml  ISic000803.xml  ISic000804.xml  ISic000805.xml  ISic000806.xml  ISic000807.xml  ISic000809.xml  ISic000810.xml  ISic000811.xml  ISic000812.xml  ISic000813.xml  ISic000814.xml  ISic000815.xml  ISic000816.xml  ISic000817.xml  ISic000818.xml  ISic000819.xml  ISic000820.xml  ISic000821.xml  ISic000822.xml  ISic000823.xml  ISic000824.xml  ISic000825.xml  ISic000826.xml  ISic000827.xml  ISic000828.xml  ISic000829.xml  ISic000830.xml  (+30 more)
example_scripts/: abbreviation_stats.py  abbreviations.py  cyrene.py  getting_started.py  material.py  tokenize_with_comments.py
notebooks/: abbreviations.ipynb  comparison_of_abbreviations_in_Sicily_and_Cyrene.ipynb  cyrene.ipynb  getting_started.ipynb  setting_ids.ipynb
notebooks/analysis/: abbreviations.ipynb  comparison_of_abbreviations_in_Sicily_and_Cyrene.ipynb
pyepidoc/: __init__.py  constants.py  displayutils.py  utils.py
pyepidoc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyepidoc/base/: docroot.py  (+6 more)
templates/: empty_template.xml
tests/: config.py
(+637 files in other folders)
