# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyepidoc"
requires-python = ">=3.9"
dependencies = [
    "lxml == 4.9.2"
]
version = "0.1.2"
authors = [
    {name = "Robert Crellin"}
]
keywords = ["XML", "EpiDoc", "TEI"]

[project.optional-dependencies]
dev = [
    "pytest == 7.4.0",
    "mypy == 1.4.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
include = ["pyepidoc"]
ignore_missing_imports = true

[tool.setuptools]
include-package-data = false