# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyepidoc"
requires-python = ">=3.9"
dependencies = [
    "lxml == 5.1.0"
]
version = "0.1.2"
authors = [
    {name = "Robert Crellin"}
]
keywords = ["XML", "EpiDoc", "TEI"]

[project.optional-dependencies]
dev = [
    "pytest == 7.4.0",
    "mypy == 1.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
exclude = ['out', 'build']

[tool.setuptools]
include-package-data = false
