# pyproject.toml

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyepidoc"
requires-python = ">=3.10"
dependencies = [
    "lxml >= 5.1.0"
]
version = "0.1.2"
authors = [
    {name = "Robert Crellin"}
]
keywords = ["XML", "EpiDoc", "TEI"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.4.0",
    "mypy >= 1.8",
    "pytest-cov"
]

dev2 = [
    "pytest >= 7.4.0",
    "mypy >= 1.8",
    "pytest-cov",
    "types-lxml"
]

ju = [
    "ipykernel",
    "pytest >= 7.4.0",
    "mypy >= 1.8",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["out", "build", "tests"]

[tool.setuptools.package-data]
"pyepidoc_data" = ["schemas/*.rng"]